--- a/src/whose-flag-app/whose-flag-app.html
+++ b/src/whose-flag-app/whose-flag-app.html
@@ -114,14 +114,21 @@
           this.outputMessage = `${this.userAnswer} is correct!`;
         }
         else {
-          this.outputMessage = `Nope! The correct answer is ${this.correctAnswer.name} !`;
+          this.outputMessage = `Nope! The correct answer is ${this.correctAnswer.name}!`;
         }
       }
       _handleResponse(event) {
         this.countryList = event.detail.response.countrycodes;
-        this.countryA = this.countryList[0];
-        this.countryB = this.countryList[1];
+        while (!this.countryA || !this.countryB || (this.countryA.code == this.countryB.code)){
+          this.countryA = this.countryList[this.__getRandomCountry()];
+          this.countryB = this.countryList[this.__getRandomCountry()];
+        }
         this.correctAnswer = this.countryA;
+        let coin = (Math.floor(Math.random() * 2));
+        this.correctAnswer = coin == 1 ? this.countryA : this.countryB;
+      }
+      __getRandomCountry() {
+        return Math.floor(Math.random() * (this.countryList.length));
       }
     }
     window.customElements.define(WhoseFlagApp.is, WhoseFlagApp);
