--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
 
-    <link rel="import" href="/src/whose-flag-app/whose-flag-app.html">
+    <link rel="import" href="/src/whose-flag-app.html">
   </head>
   <body>
     <whose-flag-app></whose-flag-app>
